--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "16.0.0",
   "private": true,
   "description": "Проект «Большое путешествие» от HTML Academy",
-  "browserslist":[
+  "browserslist": [
     "last 2 versions",
     "not dead",
     "not ie <= 11",
@@ -25,8 +25,10 @@
     "@babel/preset-env": "7.20.2",
     "babel-loader": "8.2.3",
     "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.5.1",
     "eslint": "7.32.0",
     "eslint-config-htmlacademy": "5.0.0",
+    "style-loader": "3.3.1",
     "webpack": "5.62.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.4.0"
